use vi style navigation

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,3 +31,9 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # symbols to split the screen
 bind | split-window -h
 bind - split-window -v
+
+# use vi style navigation
+setw -g mode-keys vi
+set -g status-keys vi
+bind-key -t vi-edit Up   history-up
+bind-key -t vi-edit Down history-down
