--- a/other/tmux.conf
+++ b/other/tmux.conf
@@ -1,6 +1,9 @@
 # set Zsh as your default Tmux shell
 set-option -g default-shell /usr/local/bin/zsh
 
+# to fix pdcopy pdpaste in tmux
+set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"
+
 # UTF is great, let us use that
 set -g utf8
 set-window-option -g utf8 on
