--- a/other/tmux.conf
+++ b/other/tmux.conf
@@ -2,7 +2,7 @@
 set-option -g default-shell /usr/local/bin/zsh
 
 # to fix pdcopy pdpaste in tmux
-set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"
+#set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"
 
 # UTF is great, let us use that
 set -g utf8
