--- a/~.config/!alfred/Alfred.alfredpreferences/snippets/Fiserv/info.plist
+++ b/~.config/!alfred/Alfred.alfredpreferences/snippets/Fiserv/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>snippetkeywordprefix</key>
-	<string>:</string>
+	<string>;</string>
 	<key>snippetkeywordsuffix</key>
 	<string></string>
 </dict>
