--- a/~Library/Application Support/!LaunchBar/Recent Documents.plist
+++ b/~Library/Application Support/!LaunchBar/Recent Documents.plist
@@ -7,5 +7,15 @@
 		<key>/Users/xhu/Documents/te_tests.pdf</key>
 		<real>583199402.40303004</real>
 	</dict>
+	<key>com.apple.finder</key>
+	<dict>
+		<key>/Users/xhu/Desktop/icons</key>
+		<real>584493946.37145901</real>
+	</dict>
+	<key>net.pornel.ImageOptim</key>
+	<dict>
+		<key>/Users/xhu/Desktop/icons</key>
+		<real>584493791.20705998</real>
+	</dict>
 </dict>
 </plist>
