fix copy to clipboard within tmux

--- a/~.tmux.conf
+++ b/~.tmux.conf
@@ -50,5 +50,21 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 set -g mouse on
 
 # copy to macOS clipboard
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+# jumps to bottom after copying
+# bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+# unbind -T vi-copy Enter
+# bind-key -T vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Final solution for copying
+# found here: https://github.com/tmux/tmux/issues/592
+# this: https://thoughtbot.com/blog/tmux-copy-paste-on-os-x-a-better-future is outdated
+# Setup 'v' to begin selection as in Vim
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel pbcopy
