--- a/~!.emacs.d/Makefile
+++ b/~!.emacs.d/Makefile
@@ -1,8 +1,3 @@
-prepare:
-	curl http://www.randomsample.de/profile-dotemacs.el --output profile-dotemacs.el
+bootstrap:
+	./bin/bootstrap
 
-profile:
-	emacs -Q -l ./profile-dotemacs.el \
-	--eval "(setq profile-dotemacs-file \
-	  (setq load-file-name \"$(abspath init.el)\"))" \
-	-f profile-dotemacs
