--- a/~.tmux.conf
+++ b/~.tmux.conf
@@ -67,7 +67,7 @@ set -g mouse on
 # bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 # jumps to bottom after copying
 # bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# bind-key -T vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 # unbind -T vi-copy Enter
